R2006:
======
- enhancement: influx tunable intervals
- enhancement: sntp should use domainname to determine server IP
- enhancement: added support for vacation periods
- enhancement: syslog should use logging infrastructure
- enhancement: reordered startup
- fix: some MQTT issues
- fix: exit in telnet session may cause crash
- fix: leaking socket

R2005:
======
- fix: some memory leaks
- fix: esp8266_4m ptable addresses
- enhancement: reduced use of termporary buffers

R2004:
======
- fixed WPS

R2003:
======
- mqtt should resolve hostnames
- at should check time boundaries
- fix: de/activate buttons not working on alarms.html
- ota could be more verbose on telnet
- fixed32 encoded IPs should be output in dot notation as ASCII
- WFC minimum version updated to R2003

R2002:
======
- added option to restore relay state on power-up
- added command to modify MAC addresses
- fix: version not picked up correctly from repository
- hostname must be possible to query without privileges
- added support to set domainname, use domainname for host lookups
- changed setupenv.sh to pick esp8266/v3.2 idf, because
  v3.3 produces corrupt OTA binaries